[gd_scene load_steps=4 format=3 uid="uid://bwq8x5m2n7p4c"]

[ext_resource type="Script" uid="uid://c3ln38q1qtguu" path="res://scripts/interfaz/PantallaResultados.gd" id="1_sa3jy"]

[sub_resource type="SystemFont" id="SystemFont_titulo"]

[sub_resource type="LabelSettings" id="LabelSettings_titulo"]
font = SubResource("SystemFont_titulo")
font_size = 48
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0.2, 0.2, 0.2, 0.8)
shadow_offset = Vector2(3, 3)

[node name="PantallaResultados" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sa3jy")

[node name="Fondo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="EtiquetaResultado" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "¡VICTORIA!"
label_settings = SubResource("LabelSettings_titulo")
horizontal_alignment = 1

[node name="Separador1" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TituloEstadisticas" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "=== RESULTADOS DE LA PARTIDA ==="
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListaJugadores" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Separador2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxBotones" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BotonJugarOtraVez" type="Button" parent="VBoxContainer/HBoxBotones"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Jugar otra vez"

[node name="EspaciadorBotones" type="Control" parent="VBoxContainer/HBoxBotones"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="BotonMenuPrincipal" type="Button" parent="VBoxContainer/HBoxBotones"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Menú principal"
